Cache feature support

--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -4,6 +4,17 @@ CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
 
+// -- Cache configuration
+CACHE_ENABLE = true
+LOCAL_CACHE_TIME_TO_LIVE_SECONDS = 3600
+LOCAL_CACHE_ON_HEAP_ENTRY_SIZE = 100000
+CLUSTER_RESOURCE_CACHE_ENABLE = true
+CLUSTER_CACHE_TIME_TO_LIVE_SECONDS = 900
+CLUSTER_CACHE_RESOURCE_POOL_SIZE_Mb = 512
+CLUSTER_RESOURCE_CACHE_SERVICE_LOCATION = terracotta://127.0.0.1:9410/clustered
+CLUSTER_RESOURCE_CACHE_SERVICE_DEFAULT_RESOURCE_ID = main
+CLUSTER_RESOURCE_CACHE_SERVICE_SHARE_RESOURCE_ID = primary-server-resource
+
 //Neo4j Implements configuration properties
 NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
