--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -50,6 +50,20 @@
             <artifactId>guava</artifactId>
             <version>28.2-jre</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache-clustered -->
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache-clustered</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+
         <!-- Test lib -->
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
