--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -8,7 +8,7 @@ COMMON_DATA_ORIGIN = dataOrigin001
 CACHE_ENABLE = true
 LOCAL_CACHE_TIME_TO_LIVE_SECONDS = 3600
 LOCAL_CACHE_ON_HEAP_ENTRY_SIZE = 100000
-CLUSTER_RESOURCE_CACHE_ENABLE = true
+CLUSTER_RESOURCE_CACHE_ENABLE = false
 CLUSTER_CACHE_TIME_TO_LIVE_SECONDS = 900
 CLUSTER_CACHE_RESOURCE_POOL_SIZE_Mb = 512
 CLUSTER_RESOURCE_CACHE_SERVICE_LOCATION = terracotta://127.0.0.1:9410/clustered
