--- a/docg_relationManage/pom.xml
+++ b/docg_relationManage/pom.xml
@@ -14,6 +14,19 @@
             <artifactId>docg_coreRealm</artifactId>
             <version>0.5</version>
         </dependency>
-    </dependencies>
 
+        <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.78</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.drools/drools-core -->
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>7.46.0.Final</version>
+        </dependency>
+
+    </dependencies>
 </project>
