update for Relation Extraction feature

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -2,3 +2,6 @@ applicationName=Data Ocean & Cloud Graph System Maintaining Tools
 applicationVersion=1.0.0#20201123
 applicationExitCommand=exit
 defaultApplicationFeatureName=relationExtraction
+
+# Configuration items for Relation Extraction Application
+#RelationExtraction.Executors.MaxThreadNum = 40
