--- a/docg_realmKnowledgeManage/pom.xml
+++ b/docg_realmKnowledgeManage/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>docg_realmKnowledgeManage</artifactId>
     <version>0.5</version>
 
+    <properties>
+        <drools.version>7.45.0.Final</drools.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.viewfunction</groupId>
@@ -21,11 +25,30 @@
             <artifactId>jcommander</artifactId>
             <version>1.78</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.drools/drools-core -->
+
         <dependency>
             <groupId>org.drools</groupId>
-            <artifactId>drools-core</artifactId>
-            <version>7.45.0.Final</version>
+            <artifactId>drools-bom</artifactId>
+            <type>pom</type>
+            <version>${drools.version}</version>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-api</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <scope>runtime</scope>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-mvel</artifactId>
+            <scope>runtime</scope>
+            <version>${drools.version}</version>
         </dependency>
 
     </dependencies>
