RelationAttachKind function enhancement

--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -4,7 +4,7 @@ CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
 
-// -- Cache configuration
+//Cache configuration
 CACHE_ENABLE = true
 LOCAL_CACHE_TIME_TO_LIVE_SECONDS = 3600
 LOCAL_CACHE_ON_HEAP_ENTRY_SIZE = 100000
