update for docg_dataCube model

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 /docg_relationManage/target/
 /docg_realmKnowledgeManage/target/
 /docg_realmExample/target/
-/docg_dataCube/target/
+/docg_dataCompute/target/
