--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -5,3 +5,15 @@ defaultApplicationFeatureName=relationExtraction
 
 # Configuration items for Relation Extraction Application
 #RelationExtraction.Executors.MaxThreadNum = 40
+
+isClientNode=false
+connectomeScopeAttributeName=RESOURCE_NODE_SCOPE
+connectomeScopeAttributeValue=CIM_EDGE_COMPUTE
+connectomeRoleAttributeName=RESOURCE_NODE_ROLE
+dataStoreBackupsNumber=1
+#if set dataStorePartitionsNumber,it should large than
+# dataStoreBackupsNumber to make backup setting take effect
+dataStorePartitionsNumber=10
+#ATOMIC or TRANSACTIONAL
+dataStoreAtomicityMode=ATOMIC
+dataStoreRegionName=Default_DataStore_Region
