update for docg_dataCompute model

--- a/docg_dataCompute/ApplicationLaunchCfg.properties
+++ b/docg_dataCompute/ApplicationLaunchCfg.properties
@@ -1,4 +1,4 @@
-applicationName=Data Ocean & Cloud Graph Data Compute Cube
+applicationName=Data Ocean & Cloud Graph - Data Compute Unit
 applicationVersion=1.0.0#20210203
 applicationExitCommand=exit
 defaultApplicationFeatureName=dataComputeApplication
