update for docg_dataCompute model

--- a/docg_dataCompute/configurations/dataComputeGlobalConfiguration.properties
+++ b/docg_dataCompute/configurations/dataComputeGlobalConfiguration.properties
@@ -1,7 +1,7 @@
-isClientNode=false
-connectomeScopeAttributeName=RESOURCE_NODE_SCOPE
-connectomeScopeAttributeValue=DOCG_DATA_COMPUTE_UNIT
-connectomeRoleAttributeName=RESOURCE_NODE_ROLE
+isClientUnit=false
+unitScopeAttributeName=RESOURCE_NODE_SCOPE
+unitScopeAttributeValue=DOCG_DATA_COMPUTE_UNIT
+unitRoleAttributeName=RESOURCE_NODE_ROLE
 dataStoreBackupsNumber=1
 #if set dataStorePartitionsNumber,it should large than
 # dataStoreBackupsNumber to make backup setting take effect
