--- a/docg_dataCompute/pom.xml
+++ b/docg_dataCompute/pom.xml
@@ -2,14 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>docg_platform</artifactId>
-        <groupId>com.viewfunction</groupId>
-        <version>0.1.0</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.viewfunction</groupId>
     <artifactId>docg_dataCompute</artifactId>
+    <version>0.1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -60,8 +57,14 @@
         <!-- https://mvnrepository.com/artifact/org.apache.ignite/ignite-spark -->
         <dependency>
             <groupId>org.apache.ignite</groupId>
-            <artifactId>ignite-spark</artifactId>
+            <artifactId>ignite-spark-2.4</artifactId>
             <version>${ignite.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-common</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.ignite/ignite-scalar -->
         <dependency>
@@ -134,6 +137,12 @@
             <groupId>org.datasyslab</groupId>
             <artifactId>geospark-viz_2.3</artifactId>
             <version>${geospark.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.7.1</version>
         </dependency>
     </dependencies>
 </project>
