--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.viewfunction</groupId>
     <artifactId>docg_platform</artifactId>
+    <packaging>pom</packaging>
     <version>0.1.0</version>
 
 </project>
