--- a/docg_dataCompute/pom.xml
+++ b/docg_dataCompute/pom.xml
@@ -91,6 +91,13 @@
             <version>${ignite.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+            <version>3.14.7</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
