--- a/docg_realmKnowledgeManage/RuleEngineServiceCfg.properties
+++ b/docg_realmKnowledgeManage/RuleEngineServiceCfg.properties
@@ -1,2 +1,2 @@
 example = com.viewfunction.docg.knowledgeManage.applicationCapacity.relationExtraction.ruleEngineFactsGenerators.ExampleRuleFactsGenerator
-docgrere = com.viewfunction.docg.knowledgeManage.applicationCapacity.relationExtraction.ruleEngineFactsGenerators.RelationExtractionRulesGenerator
+docgre = com.viewfunction.docg.knowledgeManage.applicationCapacity.relationExtraction.ruleEngineFactsGenerators.RelationExtractionRulesGenerator
