update for docg_realmKnowledgeManage eventStreaming daemon feature

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -1,7 +1,8 @@
 applicationName=Data Ocean & Cloud Graph System Maintaining Tools
 applicationVersion=1.0.0#20201123
 applicationExitCommand=exit
-defaultApplicationFeatureName=relationExtraction
+# available application features : relationExtraction | entityExtraction | entityFusion | entityDisambiguation
+defaultApplicationFeatureName=entityExtraction
 
 # Configuration items for Relation Extraction Application
 #RelationExtraction.Executors.MaxThreadNum = 40
