docg_realmKnowledgeManage kafka feature support

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -6,3 +6,6 @@ defaultApplicationFeatureName=entityExtraction
 
 # Configuration items for Relation Extraction Application
 #RelationExtraction.Executors.MaxThreadNum = 40
+
+# Configuration items for Entity Extraction Application
+EntityExtraction.MessageReceiver.defaultTopicName=DefaultCoreRealm
