update for docg_realmKnowledgeManage eventStreaming daemon neo4j insert feature

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -9,3 +9,5 @@ defaultApplicationFeatureName=entityExtraction
 
 # Configuration items for Entity Extraction Application
 EntityExtraction.MessageReceiver.defaultTopicName=DefaultCoreRealm
+EntityExtraction.MessageHandle.degreeOfParallelism=5
+EntityExtraction.MessageHandle.autoCreateConceptionKind=true
