--- a/docg_realmKnowledgeManage/pom.xml
+++ b/docg_realmKnowledgeManage/pom.xml
@@ -9,6 +9,8 @@
     <version>0.5</version>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <drools.version>7.45.0.Final</drools.version>
     </properties>
 
