--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,9 @@
     <packaging>pom</packaging>
     <version>0.1.0</version>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
 </project>
