support neo4j data listener feature

--- a/docg_dataCollector/EventStreamingServiceCfg.properties
+++ b/docg_dataCollector/EventStreamingServiceCfg.properties
@@ -7,13 +7,12 @@ PRODUCER_BATCH_SIZE=16348
 PRODUCER_LINGER_MS=1
 PRODUCER_BUFFER_MEMORY=33554432
 PRODUCER_MAX_REQUEST_SIZE=15728640
-
-# Kafka Consumer configuration
-CONSUMER_BOOTSTRAP_SERVERS=localhost:9092
-CONSUMER_SCHEMA_REGISTRY=http://localhost:8081
-CONSUMER_GROUP_ID=clientGroup001
-CONSUMER_ENABLE_AUTO_COMMIT=false
-CONSUMER_AUTO_COMMIT_INTERVAL_MS=5000
-CONSUMER_SESSION_TIMEOUT_MS=30000
-CONSUMER_MAX_PARTITION_FETCH_BYTES=15728640
-CONSUMER_POLL_MS=1000
+# DOCG Data Collector configuration
+DestinationTopic=DOCG_NEO4J_DATASYNC_TOPIC
+PayloadKey=neo4jPayload
+SenderGroup=DOCG_CoreRealmDataStorageGroup
+SenderCategory=DOCG_CoreRealmDataStorage
+PayloadType=NEO4J_TransactionData
+PayloadTypeDesc=NEO4J_EntitiesUpdatePayload
+PayloadProcessor=DOCG_EntitiesUpdatePayloadProcessor
+PayloadClassification=DOCG_DATA_SYNC
