--- a/docg_dataCollector/EventStreamingServiceCfg.properties
+++ b/docg_dataCollector/EventStreamingServiceCfg.properties
@@ -16,3 +16,4 @@ PayloadType=NEO4J_TransactionData
 PayloadTypeDesc=NEO4J_EntitiesUpdatePayload
 PayloadProcessor=DOCG_EntitiesUpdatePayloadProcessor
 PayloadClassification=DOCG_DATA_SYNC
+ShowOperationMessage=true
