support neo4j data listener feature

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -1,8 +1,8 @@
 applicationName=Data Ocean & Cloud Graph System Maintaining Tools
 applicationVersion=1.0.0#20201123
 applicationExitCommand=exit
-# available application features : relationExtraction | entityExtraction | entityFusion | entityDisambiguation
-defaultApplicationFeatureName=entityExtraction
+# available application features : relationExtraction | entityExtraction | entityFusion | entityDisambiguation | dataSlicesSynchronization
+defaultApplicationFeatureName=dataSlicesSynchronization
 
 # Configuration items for Relation Extraction Application
 #RelationExtraction.Executors.MaxThreadNum = 40
@@ -11,3 +11,6 @@ defaultApplicationFeatureName=entityExtraction
 EntityExtraction.MessageReceiver.defaultTopicName=DefaultCoreRealm
 EntityExtraction.MessageHandle.degreeOfParallelism=5
 EntityExtraction.MessageHandle.autoCreateConceptionKind=true
+
+# Configuration items for Data Slices Synchronization Application
+DataSlicesSynchronization.MessageReceiver.defaultTopicName=DOCG_NEO4J_DATASYNC_TOPIC
