support data compute unit dataslices sync feature

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -14,3 +14,5 @@ EntityExtraction.MessageHandle.autoCreateConceptionKind=true
 
 # Configuration items for Data Slices Synchronization Application
 DataSlicesSynchronization.MessageReceiver.defaultTopicName=DOCG_NEO4J_DATASYNC_TOPIC
+DataSlicesSynchronization.PayloadClassification=DOCG_DATA_SYNC
+DataSlicesSynchronization.PayloadType=NEO4J_TransactionData
