--- a/docg_realmKnowledgeManage/pom.xml
+++ b/docg_realmKnowledgeManage/pom.xml
@@ -21,6 +21,12 @@
             <version>0.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.viewfunction</groupId>
+            <artifactId>docg_dataCompute</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
         <dependency>
             <groupId>com.beust</groupId>
