support data compute unit dataslices sync feature

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /docg_dataAnalyze/target/
 /docg_realmKnowledgeManage/testresult/
 /docg_dataCollector/target/
+/docg_realmKnowledgeManage/ignite/
