support data compute unit dataslices sync feature

--- a/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
+++ b/docg_realmKnowledgeManage/ApplicationLaunchCfg.properties
@@ -14,5 +14,10 @@ EntityExtraction.MessageHandle.autoCreateConceptionKind=true
 
 # Configuration items for Data Slices Synchronization Application
 DataSlicesSynchronization.MessageReceiver.defaultTopicName=DOCG_NEO4J_DATASYNC_TOPIC
-DataSlicesSynchronization.PayloadClassification=DOCG_DATA_SYNC
-DataSlicesSynchronization.PayloadType=NEO4J_TransactionData
+DataSlicesSynchronization.payloadClassification=DOCG_DATA_SYNC
+DataSlicesSynchronization.payloadType=NEO4J_TransactionData
+DataSlicesSynchronization.launchSyncAtStartup=true
+DataSlicesSynchronization.syncGeospatialRegionData=true
+DataSlicesSynchronization.dataSliceGroup=defaultSliceGroup
+DataSlicesSynchronization.dataSyncPerLoadResultNumber=100000000
+DataSlicesSynchronization.degreeOfParallelism=10
