--- a/docg_dataAnalyze/pom.xml
+++ b/docg_dataAnalyze/pom.xml
@@ -8,17 +8,16 @@
         <version>0.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>docg_dataAnalyze</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-
         <ignite.version>2.9.1</ignite.version>
         <ignite.geospatial.version>2.7.2</ignite.geospatial.version>
         <spark.version>2.4.7</spark.version>
-        <geospark.version>1.3.1</geospark.version>
+        <geotools.version>geotools-24.0</geotools.version>
+        <sedona.version>1.0.0-incubating</sedona.version>
     </properties>
 
     <dependencies>
@@ -52,23 +51,51 @@
             <artifactId>spark-mllib_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.datasyslab/geospark -->
+        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-core-2.4 -->
         <dependency>
-            <groupId>org.datasyslab</groupId>
-            <artifactId>geospark</artifactId>
-            <version>${geospark.version}</version>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-core-2.4_2.11</artifactId>
+            <version>${sedona.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.datasyslab/geospark-sql -->
+        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-sql-2.4 -->
         <dependency>
-            <groupId>org.datasyslab</groupId>
-            <artifactId>geospark-sql_2.3</artifactId>
-            <version>${geospark.version}</version>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-sql-2.4_2.11</artifactId>
+            <version>${sedona.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.datasyslab/geospark-viz -->
+        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-viz-2.4 -->
+        <dependency>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-viz-2.4_2.11</artifactId>
+            <version>${sedona.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.locationtech.jts/jts-core -->
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.wololo/jts2geojson -->
+        <dependency>
+            <groupId>org.wololo</groupId>
+            <artifactId>jts2geojson</artifactId>
+            <version>0.14.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.locationtech.jts</groupId>
+                    <artifactId>jts-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.datasyslab/geotools-wrapper -->
         <dependency>
             <groupId>org.datasyslab</groupId>
-            <artifactId>geospark-viz_2.3</artifactId>
-            <version>${geospark.version}</version>
+            <artifactId>geotools-wrapper</artifactId>
+            <version>${geotools.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.ignite/ignite-log4j2 -->
         <dependency>
