update for docg data analyze model consoleApplication feature

--- a/docg_dataAnalyze/ApplicationLaunchCfg.properties
+++ b/docg_dataAnalyze/ApplicationLaunchCfg.properties
@@ -1,3 +1,6 @@
 applicationName=DataOcean & CloudGraph - Data Analyze Service
 applicationVersion=1.0.0#20210511
 applicationExitCommand=exit
+sparkApplicationName=DOCG_SparkAnalyzeApplication
+sparkMasterLocation=local
+sparkExecutorInstanceNumber=20
