--- a/docg_dataAnalyze/pom.xml
+++ b/docg_dataAnalyze/pom.xml
@@ -18,6 +18,7 @@
         <spark.version>2.4.8</spark.version>
         <geotools.version>geotools-24.0</geotools.version>
         <sedona.version>1.0.0-incubating</sedona.version>
+        <akka.version>2.6.14</akka.version>
     </properties>
 
     <dependencies>
@@ -171,6 +172,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.6.7.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.12</artifactId>
+            <version>${akka.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-remote -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-remote_2.12</artifactId>
+            <version>${akka.version}</version>
         </dependency>
     </dependencies>
 
