--- a/docg_dataAnalyze/pom.xml
+++ b/docg_dataAnalyze/pom.xml
@@ -18,7 +18,7 @@
         <spark.version>2.4.8</spark.version>
         <geotools.version>geotools-24.0</geotools.version>
         <sedona.version>1.0.0-incubating</sedona.version>
-        <akka.version>2.6.14</akka.version>
+        <akka.version>2.5.32</akka.version>
     </properties>
 
     <dependencies>
@@ -173,18 +173,38 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.7.1</version>
         </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.12</artifactId>
-            <version>${akka.version}</version>
+            <artifactId>akka-actor_2.11</artifactId>
+            <version>2.5.32</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-remote -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-remote_2.12</artifactId>
+            <artifactId>akka-remote_2.11</artifactId>
             <version>${akka.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-cluster_2.11</artifactId>
+            <version>2.5.32</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster-tools -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-cluster-tools_2.11</artifactId>
+            <version>2.5.32</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <repositories>
