--- a/docg_dataAnalyze/pom.xml
+++ b/docg_dataAnalyze/pom.xml
@@ -104,7 +104,7 @@
             <version>${geotools.version}</version>
         </dependency>
 
-   <!--
+        <!--
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-referencing</artifactId>
@@ -173,38 +173,36 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.7.1</version>
         </dependency>
-
-
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.11</artifactId>
             <version>2.5.32</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-remote -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-remote_2.11</artifactId>
             <version>${akka.version}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-cluster_2.11</artifactId>
-            <version>2.5.32</version>
+            <version>${akka.version}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-cluster-tools -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-cluster-tools_2.11</artifactId>
-            <version>2.5.32</version>
+            <version>${akka.version}</version>
         </dependency>
-
-
-
+        <!-- https://mvnrepository.com/artifact/com.twitter/chill-akka -->
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-akka_2.11</artifactId>
+            <version>0.9.5</version>
+        </dependency>
     </dependencies>
 
     <repositories>
