update for docg data analyze model consoleApplication feature

--- a/docg_dataAnalyze/ApplicationLaunchCfg.properties
+++ b/docg_dataAnalyze/ApplicationLaunchCfg.properties
@@ -4,3 +4,5 @@ applicationExitCommand=exit
 sparkApplicationName=DOCG_SparkAnalyzeApplication
 sparkMasterLocation=local
 sparkExecutorInstanceNumber=20
+transformationAKKAHostname=127.0.0.1
+transformationAKKAPort=8084
