update for docg data analyze model consoleApplication feature

--- a/docg_dataAnalyze/ApplicationLaunchCfg.properties
+++ b/docg_dataAnalyze/ApplicationLaunchCfg.properties
@@ -2,7 +2,7 @@ applicationName=DataOcean & CloudGraph - Data Analyze Service
 applicationVersion=1.0.0#20210511
 applicationExitCommand=exit
 sparkApplicationName=DOCG_SparkAnalyzeApplication
-sparkMasterLocation=local
+sparkMasterLocation=local[*]
 sparkExecutorInstanceNumber=20
 transformationAKKAHostname=127.0.0.1
 transformationAKKAPort=8084
