--- a/docg_dataCompute/pom.xml
+++ b/docg_dataCompute/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <ignite.version>2.9.1</ignite.version>
+        <ignite.version>2.10.0</ignite.version>
         <ignite.geospatial.version>2.7.2</ignite.geospatial.version>
         <spark.version>2.4.7</spark.version>
         <geospark.version>1.3.1</geospark.version>
@@ -76,7 +76,10 @@
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-kafka</artifactId>
+            <!--
             <version>${ignite.version}</version>
+            -->
+            <version>2.9.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.ignite/ignite-ml -->
         <dependency>
