--- a/docg_dataCompute/pom.xml
+++ b/docg_dataCompute/pom.xml
@@ -93,18 +93,22 @@
             <artifactId>ignite-rest-http</artifactId>
             <version>${ignite.version}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jooq</artifactId>
             <version>3.14.7</version>
         </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.6.7.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.78</version>
         </dependency>
     </dependencies>
 </project>
