--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /docg_realmKnowledgeManage/testresult/
 /docg_dataCollector/target/
 /docg_realmKnowledgeManage/ignite/
+/docg_analysisMotor/target/
