update for docg analysisProvider module

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -4,7 +4,11 @@ applicationExitCommand=exit
 # SPARK Configuration
 sparkApplicationName=DOCG_AnalysisSparkApplication
 sparkMasterLocation=local[*]
-sparkExecutorInstanceNumber=20
+sparkCoresMax=40
+sparkExecutorCores=20
+sparkExecutorMemory=5G
+sparkMemoryOffHeapEnabled=true
+sparkMemoryOffHeapSize=20G
 # AKKA Configuration
 providerCommunicationHostName=127.0.0.1
 providerCommunicationPort=8084
