update for docg analysis provider module feature

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -3,9 +3,10 @@ applicationVersion=1.0.0
 applicationExitCommand=exit
 # SPARK Configuration
 sparkApplicationName=DOCG_AnalysisSparkApplication
-sparkMasterLocation=local[*]
-sparkCoresMax=40
-sparkExecutorCores=20
+#sparkMasterLocation=local[*]
+sparkMasterLocation=spark://wangychu-X10DAi:7077
+sparkCoresMax=10
+sparkExecutorCores=2
 sparkExecutorMemory=5G
 sparkMemoryOffHeapEnabled=true
 sparkMemoryOffHeapSize=20G
