update for docg analysis provider module feature

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -3,18 +3,19 @@ applicationVersion=1.0.0
 applicationExitCommand=exit
 # SPARK Configuration
 sparkApplicationName=DOCG_AnalysisSparkApplication
-sparkMasterLocation=local[*]
-#sparkMasterLocation=spark://wangychu-X10DAi:7077
+#sparkMasterLocation=local[*]
+sparkMasterLocation=spark://wangychu-X10DAi:7077
 sparkCoresMax=10
 sparkExecutorCores=2
 sparkExecutorMemory=5G
 sparkMemoryOffHeapEnabled=true
 sparkMemoryOffHeapSize=20G
+analysisProviderSparkRuntimeJarLocation=/media/wangychu/Application/Local_Applications/Apache/Spark/spark-3.1.2/jars/docg_analysisProvider-1.0.0.jar
 # AKKA Configuration
 providerCommunicationHostName=127.0.0.1
 providerCommunicationPort=8084
 # Ignite Configuration
-isClientIgniteNode=false
+isClientIgniteNode=true
 igniteDataBackupsNumber=1
 ignitePartitionsNumber=10
 #ATOMIC or TRANSACTIONAL
