update for new docg analysis provider feature

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -3,14 +3,15 @@ applicationVersion=1.0.0
 applicationExitCommand=exit
 # SPARK Configuration
 sparkApplicationName=DOCG_AnalysisSparkApplication
-#sparkMasterLocation=local[*]
-sparkMasterLocation=spark://wangychu-X10DAi:7077
+sparkMasterLocation=local[*]
+#sparkMasterLocation=spark://wangychu-X10DAi:7077
 sparkCoresMax=10
 sparkExecutorCores=2
 sparkExecutorMemory=5G
 sparkMemoryOffHeapEnabled=true
 sparkMemoryOffHeapSize=20G
 analysisProviderSparkRuntimeJarLocation=/media/wangychu/Cache/DOCG_Runtime/AnalysisProvider/extCLASS/docg_analysisProvider-1.0.0.jar
+sedonaJoinNumPartition=40
 # AKKA Configuration
 providerCommunicationHostName=127.0.0.1
 providerCommunicationPort=8084
