update for docg analysisProvider module

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -11,6 +11,7 @@ sparkExecutorMemory=5G
 sparkMemoryOffHeapEnabled=true
 sparkMemoryOffHeapSize=20G
 analysisProviderSparkRuntimeJarLocation=/media/wangychu/Cache/DOCG_Runtime/AnalysisProvider/extCLASS/docg_analysisProvider-1.0.0.jar
+## Typically need use 2-4 partitions for each CPU in spark cluster
 sedonaJoinNumPartition=40
 # AKKA Configuration
 providerCommunicationHostName=127.0.0.1
