--- a/docg_analysisProvider/pom.xml
+++ b/docg_analysisProvider/pom.xml
@@ -17,10 +17,6 @@
         <geotools.version>geotools-24.0</geotools.version>
         <sedona.version>1.0.1-incubating</sedona.version>
         <akka.version>2.6.14</akka.version>
-
-        <!--
-        <scala.version>2.11.12</scala.version>
-        -->
     </properties>
 
     <dependencies>
@@ -191,7 +187,6 @@
             <artifactId>gt-metadata</artifactId>
             <version>24.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-epsg-hsql</artifactId>
@@ -202,40 +197,14 @@
             <artifactId>gt-epsg-extension</artifactId>
             <version>24.0</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/ml.sparkling/sparkling-graph-api -->
-        <dependency>
-            <groupId>ml.sparkling</groupId>
-            <artifactId>sparkling-graph-api_2.11</artifactId>
-            <version>0.0.7</version>
-        </dependency>
+        <!--使用 SparklingGraph v0.0.7 技术执行部分图分析计算，mvn repository 只包含 scala 2.11的实现，与spark v3的要求冲突，
+            故使用源代码的形式支持相关功能(代码支持 scala 2.11与 2.12)，以下mvn 导入只用来获取相关类库 -->
         <!-- https://mvnrepository.com/artifact/ml.sparkling/sparkling-graph-operators -->
         <dependency>
             <groupId>ml.sparkling</groupId>
             <artifactId>sparkling-graph-operators_2.11</artifactId>
             <version>0.0.7</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/ml.sparkling/sparkling-graph -->
-        <dependency>
-            <groupId>ml.sparkling</groupId>
-            <artifactId>sparkling-graph_2.11</artifactId>
-            <version>0.0.7</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/ml.sparkling/sparkling-graph-utils -->
-        <dependency>
-            <groupId>ml.sparkling</groupId>
-            <artifactId>sparkling-graph-utils_2.11</artifactId>
-            <version>0.0.7</version>
-        </dependency>
-
-        <!--
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        -->
-
     </dependencies>
 
     <repositories>
