--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -16,3 +16,4 @@ sedonaJoinNumPartition=40
 # AKKA Configuration
 providerCommunicationHostName=127.0.0.1
 providerCommunicationPort=8084
+providerMaximumDataTransformFrameSize=500g
