Update for Analysis Provider Model feature

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -1,5 +1,5 @@
 applicationName=DOCG Analysis Provider
-applicationVersion=1.0.0
+applicationVersion=1.0.0#20211227
 applicationExitCommand=exit
 # SPARK Configuration
 sparkApplicationName=DOCG_AnalysisSparkApplication
