Update for Analysis Provider Model feature

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -5,8 +5,8 @@ applicationExitCommand=exit
 sparkApplicationName=DOCG_AnalysisSparkApplication
 sparkMasterLocation=local[*]
 #sparkMasterLocation=spark://wangychu-X10DAi:7077
-sparkCoresMax=10
-sparkExecutorCores=2
+sparkExecutorCores=40
+sparkDefaultParallelism=20
 sparkExecutorMemory=5G
 sparkMemoryOffHeapEnabled=true
 sparkMemoryOffHeapSize=20G
@@ -17,3 +17,5 @@ sedonaJoinNumPartition=40
 providerCommunicationHostName=127.0.0.1
 providerCommunicationPort=8084
 providerMaximumDataTransformFrameSize=1000g
+# Data Slice Configuration
+massDataOperationParallelism=40
