--- a/docg_realmKnowledgeManage/CoreRealmCfg.properties
+++ b/docg_realmKnowledgeManage/CoreRealmCfg.properties
@@ -1,4 +1,4 @@
-//Can be NEO4J or ORIENTDB
+//Can be NEO4J or ARCADEDB
 CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 
 //Common configuration properties
@@ -20,5 +20,3 @@ NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
 NEO4J_PASSWORD = wyc
-
-//OrientDB Implements configuration properties
