--- a/docg_realmExample/pom.xml
+++ b/docg_realmExample/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <ignite.version>2.12.0</ignite.version>
-        <geotools.version>23.2</geotools.version>
+        <geotools.version>27-SNAPSHOT</geotools.version>
     </properties>
 
     <dependencies>
