update for GeospatialScaleCalculable feature

--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>gt-metadata</artifactId>
             <version>${geotools.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-main</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
         <!-- Test lib -->
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
