--- a/docg_dataCompute/pom.xml
+++ b/docg_dataCompute/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>jcommander</artifactId>
             <version>1.78</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.viewfunction</groupId>
+            <artifactId>docg_coreRealm</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
