--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -19,4 +19,4 @@ CLUSTER_RESOURCE_CACHE_SERVICE_SHARE_RESOURCE_ID = primary-server-resource
 NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
-NEO4J_PASSWORD = wyc
+NEO4J_PASSWORD = wyc4docg
