--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -12,6 +12,8 @@
         <neo4j.version>5.3.0</neo4j.version>
         <neo4j-cypher-dsl.version>2022.8.2</neo4j-cypher-dsl.version>
         <geotools.version>26.4</geotools.version>
+
+        <arcadedb.version>23.1.2</arcadedb.version>
     </properties>
 
     <dependencies>
@@ -83,6 +85,18 @@
             <artifactId>gt-geojson</artifactId>
             <version>${geotools.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.arcadedb</groupId>
+            <artifactId>arcadedb-engine</artifactId>
+            <version>${arcadedb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.arcadedb</groupId>
+            <artifactId>arcadedb-network</artifactId>
+            <version>${arcadedb.version}</version>
+        </dependency>
+
         <!-- Test lib -->
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
